# Eangel

./: .pre-commit-config.yaml  .travis.yml  README.md  ali-bailian-key.md  camFS18m  cam_flexSave18minHD2019V1.8.cpp  installOpenCV4_tools.sh  linux-develop-ref.md  opencv_install.sh  package.json  sendTest.sh
.github/workflows/: ccpp.yml  code-reviewdog.yml  runEveryweek.yml  runSearch.yml  runTest.yml
ALG/alg/: CMakeLists.txt  eigenTest.cpp  kalTest.cpp  kalTest2.cpp  kalTestOrg.cpp
ALG/alg/eigenMatrix/: CMakeLists.txt  eigenTest.cpp
ALG/math/: Makefile  findNumberMultiThread.cpp  findSpecialNumber.cpp
ALG/vector-seq/: CMakeLists.txt  RobotSensorData.idl
ALG/workspace_DDSHelloWorld/: CMakeLists.txt
ALG/workspace_DDSHelloWorld/src/: HelloWorld.cxx  HelloWorld.h  HelloWorld.idl  HelloWorldCdrAux.hpp  HelloWorldCdrAux.ipp  HelloWorldPubSubTypes.cxx  HelloWorldPubSubTypes.h  HelloWorldPublisher.cpp  HelloWorldSubscriber.cpp
agent/: agent-qianwen.sh  ai_assistant_qwen_1.py
agent/agents-crawel/: README.md  agent_hunter.py  c++23进展.md  dual_cam_soc_diag.py  email_send_log.json  hunter_config.json  inquiry_chroma_llm.py  inquiry_chroma_llm0.py  inquiry_chroma_llm_short.py  isp_chip_agent.py  isp_maintain.py  jeston_agent.py  jeston_agent_chroma_SOC_sensor.py  jeston_agent_chroma_sensor_SOC.py  jeston_agent_chroma_v1.py  jeston_agent_chroma_v11.py  markdown_import_chroma.py  milit.py  requirements.txt  search.sh  skills_chroma_qianwen.py  tech_key_config_map.json  test-chroma_collection.py  test-dash-search.py  test-own-techweb.py  test-search.py  test.py  test_read_chroma_db.py  urls_config.json  urls_config_camera_isp_soc.json  video_pipeline_arch_optimizer.py
agent/edgeops-agent/: agent.py  config.json  config.yaml  requirements.txt  run.sh
c_cpp_Important_code/cInputTest/: Makefile  testInput_safe  testInput_safe.c
c_cpp_Important_code/cppConsole/: Makefile  main.cpp
c_cpp_Important_code/cpp_console2/: CMakeLists.txt  binaryOP.c  main.cpp
c_cpp_Important_code/cpp_console2_boostTime/: CMakeLists.txt  main.cpp  testStruct.cpp  threadCpt.cpp
c_cpp_Important_code/numOpAndFormat_cpp/: Makefile  numCalcPrecision  testNumFormat.cpp
c_cpp_Important_code/sizeofTest/: a.out  sizeof.cpp
c_cpp_Important_code/strCopy/: main.cpp
c_cpp_Important_code/vel_cmd_make_bin/: Makefile  produceStructBinaryData.c  produceVelStBinaryData
cam/: Makefile  cam_flexSave18minHD2019V1.8.cpp  video_showHD10M20190414_720pV1.51.cpp
cam/cam1min/: Makefile  cam1min  cam1min.cpp
cam10min/: Makefile  Makefile_opencv3.1  camFS10m  camFS10m_opt  cam_flexSave10minHD20190613V2.0.cpp  cam_flexSave10minHD20190714_opencv4.1_V2.2.cpp
cam10min_OPENCV4/: Makefile  cam10min_Save_v2.3.cpp  cam1min  cam1min_Save_v2.4.cpp  cam_NewflexSave10minHD_opencv4.1_V2.2.cpp
data_analysis/: participants-plot-v1.py
deeplearning/: ## conda安装使用.md  condaUse.md  detectImgPathTmpRoot_v1.2.py
doc/: Makefile
pySpider/: ReadMe.md  app.py  img_file_spiderParseNewsV1.py  img_file_spiderParseNewsV2.0.py  install-lib.sh  mysqlWriteNewsV1.py  mysqlWriteNewsV2.py  neteaseSpiderV1.3.py  neteaseSpiderV1.4.py  neteaseSpiderV2.py  scrapyExample.py  sendNewsIMG_V2.2t3.py  sendNewsIMG_V2.2t5.py  sendNewsIMG_V2.2t6.py  sendNewsIMG_leifengV2.3t1.py  spider_TechAI_DB.py  spider_TechAI_DB_V1.8.2t1.py  spider_TechMili_Drive_OPT_V1.8.py  spider_TechMili_ForWindows_V1.6.py  spider_techAI_send_ForWindows_V1.2.py  spider_techAIpro_DB_V2.0.py  spider_tech_send.py  spider_tech_send_ForWindows_V1.1.py  spider_tech_send_IMG.py  techAI_search.py  techAI_searchSINA.py  techAI_searchValueOpt.py  tech_valueRank.py
pySpider/searchOpt/: main.py  mysqlWriteNewsV2.py  techRank_DB_opt.py  techRank_DB_opt_v2.py  techRank_DB_opt_v2_2DL.py  tech_key_config_map.json
pySpider/soc_isp/: soc_camera_config.json  soc_memory_calculator.py
robot/: Eangel_server_2020_v1.5.py  Eangel_server_USB_2020_v1.3.py  Eangel_server_optCMD.py  Eangel_server_thread_opt_UsbDEV.py  Eangel_server_thread_opt_v1.6.1.py  Eangel_server_thread_opt_v1.7.py  Eangel_server_thread_v1.6.py  Readme.md  agv状态和参数配置---中间层框架-07  cam_Server_optRGB_720p.py  cam_serverNoshow_720p.py  cam_server_python.py  device_info_check.py  get_host_ip.py  logAlert-os.py  remoteControl_pi2.py  servoPrecise_control.py
robot/RobotCamServer/: CMakeLists.txt
robot/RobotCamServer/src/: file.cpp  file.h  logging.cpp  logging.h  main.cpp  tcpsocket.cpp  tcpsocket.h
robot/RobotCamServer/src/util/: Base64Util.h  FileUtil.h  TimeUtil.h  stringProcess.h
robot/RobotCamServer_linux/: CMakeLists.txt
robot/RobotCamServer_linux/src/: camdata.h  main.cpp  main.h  tcpsocket.cpp  tcpsocket.h
robot/RobotCamServer_linux/src/util/: Base64Util.h
robot/RobotControl-Linux/: CAR.pro.user.197f1fa  CAR.pro.user.8029b70.22  CAR.pro.user.b3b6891  buttonIcon.qrc
robot/RobotControl-Thread-Linux/: CAR.pro
robot/RobotControl-ThreadSocket/: CAR.pro
robot/RobotControl-ThreadSocketOpt/: CAR.pro
robot/RobotControl-ThreadSocketOptQueue/: CAR.pro
robot/Robot_Rtsp_Control/: Robot_Rtsp_Control.pro  logging.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qdisplay.cpp  qdisplay.h  videoplayer.cpp  videoplayer.h
robot/SSFEangel__Serial_-servoOpt/: SSFEangel_Raspi__Serial_OUT-servoOpt20190331-202209_A0A2-V3.4.ino
robot/SSF_Eangel__SHORT__A0A2/: SSFEangel_Raspi__SHORT_OUT20190331-202209_A0A2V3.3.ino
robot/carControl/: CAR.pro  logging.cpp  logging.h  (+4 more)
robot/carControl-HD720p/: CAR.pro
robot/socketCamServer/: CMakeLists.txt  main.cpp  tcpsocket.cpp  tcpsocket.h
scripts/: emptyTest.sh  ftp配置命令.txt  git-tools-check.sh  install-docker.sh  installMysql.sh  jetson-utils-installLIb.txt  opencv3.4Install.sh  saveImg.sh  techAI_searchValue.py  toolsInstall.sh
videoRecord/: Makefile  video_NOshowHD10Mthreadv2.0t.cpp  video_thread_Record_v1.3.cpp
videoRecord/videoRecord/: CMakeLists.txt  Makefile  Makefile_cam
videoRecord/videoRecord/include/: log.h
videoRecord/videoRecord/src/: get_device_info.cpp  log.cpp  log.h  video_RecordAndCam.cpp
videoShow/: Makefile  video_thread_10fpsRecord_v1.4.cpp
(+427 files in other folders)
